--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="true">
+    <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
             <solid android:color="@color/white" />
-            <corners android:radius="50dp" />
-            <stroke android:color="@color/design_default_color_on_primary" android:width="1dp"/>
+            <stroke android:color="@color/primary_color" android:width="1dp"/>
         </shape>
-
+    </item>
+    <item android:state_enabled="true" android:state_focused="false">
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <solid android:color="@color/white" />
+            <stroke android:color="@android:color/darker_gray" android:width="1dp"/>
+        </shape>
     </item>
 </selector>
