--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -24,6 +24,7 @@
         android:orientation="horizontal"
         android:weightSum="2">
 
+
         <Button
             android:id="@+id/btnRegister"
             android:layout_width="wrap_content"
@@ -70,9 +71,14 @@
             android:focusable="auto"
             />
     </androidx.appcompat.widget.LinearLayoutCompat>
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_login"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment_register"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
