--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".Register"
     android:background="@color/white"
-    tools:context=".Login">
+    >
 
     <Button
         android:text="Back"
-        android:id="@+id/login_btnBack"
+        android:id="@+id/register_btnBack"
         android:drawableStart="@drawable/ic_baseline_arrow_back_ios"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
@@ -26,7 +27,19 @@
 
 
         <EditText
-            android:id="@+id/edtEmail"
+            android:id="@+id/register_edtFullName"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/custom_input"
+            android:drawableStart="@drawable/ic_baseline_person_24"
+            android:drawablePadding="10dp"
+            android:ems="10"
+            android:hint="Full Name"
+            android:inputType="text"
+            android:paddingHorizontal="20dp" />
+        <EditText
+            android:id="@+id/register_edtEmail"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="20dp"
@@ -39,7 +52,7 @@
             android:paddingHorizontal="20dp" />
 
         <EditText
-            android:id="@+id/edtPassword"
+            android:id="@+id/register_edtPassword"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="20dp"
@@ -50,14 +63,37 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:paddingHorizontal="20dp" />
+        <EditText
+            android:id="@+id/register_edtPhone"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/custom_input"
+            android:drawableStart="@drawable/ic_baseline_local_phone"
+            android:drawablePadding="10dp"
+            android:ems="10"
+            android:hint="Phone"
+            android:inputType="text"
+            android:paddingHorizontal="20dp" />
+        <EditText
+            android:id="@+id/register_edtAddress"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/custom_input"
+            android:drawableStart="@drawable/ic_baseline_location_city"
+            android:drawablePadding="10dp"
+            android:ems="10"
+            android:hint="Address"
+            android:inputType="text"
+            android:paddingHorizontal="20dp" />
 
         <Button
-            android:id="@+id/btnCloseLogin"
+            android:id="@+id/register_btnRegister"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:backgroundTint="@color/primary_color"
-            android:text="Login" />
+            android:text="Register" />
     </LinearLayout>
-
 
 </RelativeLayout>
