--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/map_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
     <androidx.fragment.app.FragmentContainerView
@@ -11,6 +12,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="56dp"
         tools:context=".MapsActivity" />
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -42,8 +44,7 @@
             android:layout_weight="1"
             android:background="@drawable/custom_button"
             android:backgroundTint="@color/primary_color"
-            android:text="Login"
-            />
+            android:text="Login" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -54,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/map_wrapperBtn"
         android:layout_margin="10dp">
+
         <EditText
             android:id="@+id/map_edtSearch"
             android:layout_width="match_parent"
@@ -68,15 +70,16 @@
             android:paddingHorizontal="20dp"
             android:paddingStart="20dp"
             android:textSize="20dp" />
+
         <ImageButton
-            android:visibility="gone"
+            android:id="@+id/map_btnLogout"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:background="@android:color/transparent"
-            android:id="@+id/map_btnLogout"
-            android:layout_alignParentRight="true"
             android:src="@drawable/ic_logout"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
+            android:visibility="gone" />
 
     </RelativeLayout>
 
@@ -84,9 +87,20 @@
         android:id="@+id/fragment_login"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_register"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:itemBackground="@color/white"
+        app:itemIconTint="@color/nav_item_selected_state"
+        app:itemTextColor="@color/nav_item_selected_state"
+        app:menu="@menu/bottom_nav_menu"
+        />
 
 </RelativeLayout>
