--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,106 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    tools:context=".MapsActivity">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <FrameLayout
+        android:id="@+id/frame_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="56dp"
-        tools:context=".MapsActivity" />
+        />
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/map_wrapperBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal"
-        android:weightSum="2">
-
-
-        <Button
-            android:id="@+id/map_btnRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginRight="12dp"
-            android:layout_weight="1"
-            android:background="@drawable/custom_button"
-            android:backgroundTint="@color/primary_color"
-            android:text="Register" />
-
-        <Button
-            android:id="@+id/map_btnLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="@drawable/custom_button"
-            android:backgroundTint="@color/primary_color"
-            android:text="Login" />
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-    <RelativeLayout
-        android:id="@+id/map_wrapperSearchInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/map_wrapperBtn"
-        android:layout_margin="10dp">
-
-        <EditText
-            android:id="@+id/map_edtSearch"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/custom_input_search"
-            android:drawableStart="@drawable/custom_search_icon"
-            android:drawablePadding="12dp"
-            android:ems="10"
-            android:focusable="auto"
-            android:hint="Search your location"
-            android:inputType="text"
-            android:paddingHorizontal="20dp"
-            android:paddingStart="20dp"
-            android:textSize="20dp" />
-
-        <ImageButton
-            android:id="@+id/map_btnLogout"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_logout"
-            android:visibility="gone" />
-
-    </RelativeLayout>
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_login"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_register"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemBackground="@color/white"
         app:itemIconTint="@color/nav_item_selected_state"
+        app:itemRippleColor="@android:color/transparent"
         app:itemTextColor="@color/nav_item_selected_state"
-        app:menu="@menu/bottom_nav_menu"
-        />
+        app:menu="@menu/bottom_nav_menu" />
+
 
 </RelativeLayout>
