--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -14,4 +14,13 @@
             <stroke android:color="@android:color/darker_gray" android:width="1dp"/>
         </shape>
     </item>
+
+    <item android:state_enabled="false">
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <solid android:color="@color/white" />
+            <stroke android:color="@android:color/darker_gray" android:width="1dp"/>
+        </shape>
+    </item>
+
 </selector>
