--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -54,6 +54,7 @@
             android:id="@+id/login_btnLogin"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:padding="10dp"
             android:backgroundTint="@color/primary_color"
             android:text="Login" />
     </LinearLayout>
