--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,14 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".Map">
 
-    <fragment
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:id="@+id/google_map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/map_wrapperBtn"
         android:layout_width="match_parent"
@@ -45,38 +44,21 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-    <RelativeLayout
-        android:id="@+id/map_wrapperSearchInput"
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/map_edtSearch"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_below="@+id/map_wrapperBtn"
-        android:layout_margin="10dp">
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/map_edtSearch"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/custom_input_search"
-            android:drawableStart="@drawable/custom_search_icon"
-            android:drawablePadding="12dp"
-            android:ems="10"
-            android:focusable="auto"
-            android:hint="Search your location"
-            android:inputType="text"
-            android:paddingHorizontal="20dp"
-            android:paddingStart="20dp"
-            android:textSize="20dp" />
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/map_btnLogout"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_logout"
-            android:visibility="gone" />
-
-    </RelativeLayout>
+        android:layout_margin="10dp"
+        android:background="@drawable/custom_input_search"
+        android:drawableStart="@drawable/custom_search_icon"
+        android:drawablePadding="12dp"
+        android:ems="10"
+        android:focusable="auto"
+        android:hint="Search your location"
+        android:inputType="text"
+        android:paddingHorizontal="20dp"
+        android:paddingStart="20dp"
+        android:textSize="20dp" />
 
 </RelativeLayout>
