--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,10 +9,17 @@
     <item
         android:id="@+id/nvb_campaigns"
         android:icon="@drawable/ic_campaign"
-        android:title="Campaigns" />
+        android:title="Campaigns"
+        android:visible="false" />
     <item
         android:id="@+id/nvb_report"
         android:icon="@drawable/ic_report"
-        android:title="Report" />
+        android:title="Report"
+        android:visible="false" />
+    <item
+        android:id="@+id/nvb_profile"
+        android:icon="@drawable/ic_profile"
+        android:title="Profile"
+        android:visible="false" />
 
 </menu>
