--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Register"
-    android:background="@color/white"
-    >
-
+    tools:context=".LoginActivity">
     <androidx.appcompat.widget.AppCompatButton
         android:text="Back"
-        android:id="@+id/register_btnBack"
+        android:id="@+id/login_btnBack"
         android:drawableStart="@drawable/ic_baseline_arrow_back_ios"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
@@ -25,21 +23,8 @@
         android:layout_marginHorizontal="30dp"
         android:orientation="vertical">
 
-
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/register_edtFullName"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/custom_input"
-            android:drawableStart="@drawable/ic_baseline_person_24"
-            android:drawablePadding="10dp"
-            android:ems="10"
-            android:hint="Full Name"
-            android:inputType="text"
-            android:paddingHorizontal="20dp" />
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/register_edtEmail"
+            android:id="@+id/login_edtEmail"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="20dp"
@@ -52,7 +37,7 @@
             android:paddingHorizontal="20dp" />
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/register_edtPassword"
+            android:id="@+id/login_edtPassword"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="20dp"
@@ -63,39 +48,13 @@
             android:hint="Password"
             android:inputType="textPassword"
             android:paddingHorizontal="20dp" />
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/register_edtPhone"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/custom_input"
-            android:drawableStart="@drawable/ic_baseline_local_phone"
-            android:drawablePadding="10dp"
-            android:ems="10"
-            android:hint="Phone"
-            android:inputType="text"
-            android:paddingHorizontal="20dp" />
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/register_edtAddress"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/custom_input"
-            android:drawableStart="@drawable/ic_baseline_location_city"
-            android:drawablePadding="10dp"
-            android:ems="10"
-            android:hint="Address"
-            android:inputType="text"
-            android:paddingHorizontal="20dp" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/register_btnRegister"
+            android:id="@+id/login_btnLogin"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:padding="10dp"
-            android:background="@drawable/custom_button"
             android:backgroundTint="@color/primary_color"
-            android:text="Register" />
+            android:text="Login" />
     </LinearLayout>
-
 </RelativeLayout>
