--- a/app/src/main/res/layout/activity_create_campaign.xml
+++ b/app/src/main/res/layout/activity_create_campaign.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="40dp"
+    android:scrollbars="none"
     tools:context=".CreateCampaignActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="20dp"
-        >
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/crCam_btnBack"
@@ -62,11 +62,12 @@
                     android:src="@drawable/app_logo" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_below="@+id/crCam_image"
                     android:layout_centerInParent="true"
-                    android:orientation="horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:orientation="horizontal">
+
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/crCam_btnChangeImage"
                         android:layout_width="wrap_content"
@@ -79,18 +80,18 @@
                         android:text="Change" />
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:layout_marginLeft="20dp"
-                        android:visibility="gone"
                         android:id="@+id/crCam_btnRemoveImage"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
                         android:layout_below="@+id/crCam_image"
+                        android:layout_marginLeft="20dp"
                         android:background="@drawable/custom_button"
                         android:backgroundTint="@color/secondary_color"
                         android:drawableStart="@drawable/ic_remove_photo"
                         android:drawablePadding="10dp"
                         android:padding="10dp"
-                        android:text="Change" />
+                        android:text="Change"
+                        android:visibility="gone" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
             </RelativeLayout>
@@ -118,16 +119,32 @@
                 android:inputType="text"
                 android:paddingHorizontal="20dp" />
 
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/crCam_edtStartDate"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
+            <RelativeLayout
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/custom_input"
-                android:ems="10"
-                android:hint="Start Date"
-                android:inputType="date"
-                android:paddingHorizontal="20dp" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/crCam_edtStartDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:background="@drawable/custom_input"
+                    android:ems="10"
+                    android:focusable="false"
+                    android:hint="Start Date"
+                    android:inputType="none|date"
+                    android:paddingHorizontal="20dp" />
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/crCam_btnPickDate"
+                    android:paddingRight="20dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_calendar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </RelativeLayout>
+
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/crCam_edtDescription"
@@ -136,9 +153,10 @@
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/custom_input"
                 android:ems="10"
+                android:gravity="top"
                 android:hint="Description"
                 android:inputType="textMultiLine"
-                android:paddingHorizontal="20dp" />
+                android:padding="20dp" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/crCam_btnCreate"
