--- a/app/src/main/res/layout/activity_create_campaign.xml
+++ b/app/src/main/res/layout/activity_create_campaign.xml
@@ -55,6 +55,7 @@
                 android:layout_marginBottom="20dp">
 
                 <androidx.appcompat.widget.AppCompatImageView
+                    android:tag="default"
                     android:id="@+id/crCam_image"
                     android:layout_width="match_parent"
                     android:layout_height="189dp"
@@ -90,7 +91,7 @@
                         android:drawableStart="@drawable/ic_remove_photo"
                         android:drawablePadding="10dp"
                         android:padding="10dp"
-                        android:text="Change"
+                        android:text="Remove"
                         android:visibility="gone" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
