--- a/app/src/main/res/drawable/custom_input_search.xml
+++ b/app/src/main/res/drawable/custom_input_search.xml
@@ -4,8 +4,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
             <corners android:radius="50dp" />
-            <stroke android:color="@color/design_default_color_on_primary" android:width="1dp"/>
+            <stroke android:color="@android:color/darker_gray" android:width="1dp"/>
         </shape>
-
     </item>
 </selector>
