--- a/app/src/main/res/layout/fragment_list_campaign.xml
+++ b/app/src/main/res/layout/fragment_list_campaign.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ListCampaign"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatEditText
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/listCam_edtSearch"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -21,11 +21,12 @@
         android:drawablePadding="12dp"
         android:ems="10"
         android:focusable="auto"
-        android:hint="Campaign Name"
         android:inputType="text"
         android:paddingHorizontal="20dp"
         android:paddingStart="20dp"
         android:textSize="20dp"
+        app:iconifiedByDefault="false"
+        app:queryHint="Search campaign name"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
